--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ ARuke/vendor/*
 
 #info.plist
 TORERU/TORERU/info.plist
+#UserInterfaceState
+TORERU/TORERU.xcodeproj/project.xcworkspace/xcuserdata
