--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,4 @@ ARuke/vendor/*
 #info.plist
 TORERU/TORERU/info.plist
 #UserInterfaceState
-TORERU/TORERU.xcodeproj/project.xcworkspace/xcuserdata
+TORERU/TORERU.xcodeproj/project.xcworkspace/xcuserdata/
