--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,9 @@ DerivedData/
 
 #UserInterfaceState
 TORERU/TORERU.xcodeproj/project.xcworkspace/xcuserdata/
+
+# Carthage
+#
+# Add this line if you want to avoid checking in source code from Carthage dependencies.
+# Carthage/Checkouts
 !Carthage/Build
